2001-05-13  Dave Peticolas  <dave@krondo.com>

	* src/gnome/new-user.glade: tweak gui

	* src/gnome/window-main.c: the "destroy" handler does not
	return a result. add menu item & functionality for account
	hierarchy export.

	* src/scm/report/welcome-to-gnucash.scm: take out the ugly :)

2001-05-12  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/category-barchart.scm, net-barchart.scm,
	average-balance.scm: Added price-source option. Uses new function
	gnc:make-exchange-nearest-function to offer time-varying exchange
	rates.

	* src/scm/report-utilities.scm
	(gnc:acccounts-get-all-subaccounts): added.

	* src/scm/commodity-utilities.scm
	(gnc:make-exchange-nearest-function): Added this and many more
	functions to enable time-variant currency exchange.

	* src/scm/report/price-scatter.scm: Add warnings if data is empty.

2001-05-12  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-options.c: fix destructor bug 

	* src/gnome/window-report.c: add options dialog to edited list
	even if opened by a URL click. 
	
	* src/gnome/window-main.c: handle close of last window safely.
	Still don't save MDI info correctly with WM close, though.

2001-05-12  Dave Peticolas  <dave@krondo.com>

	* src/FileDialog.c (gncFileSaveAs): don't use a default filename

	* src/scm/report/hello-world.scm: put under utility menu

	* src/scm/report/welcome-to-gnucash.scm: don't show in menu

	* src/scm/report/iframe-url.scm: put under utility menu

	* src/scm/report.scm: add 'utility reports' menu

	* src/gnome/new-user-funs.c: add support for opening balances

	* src/gnome/gnc-amount-edit.c (gnc_amount_edit_evaluate): allow
	empty string as zero

	* src/gnome/new-user-callbacks.c: add support for opening balances

	* src/gnome/dialog-account.c (gnc_account_list_fill): fix warning
	(gnc_account_window_destroy_cb): destroy callback has no return
	(gnc_ui_to_account): reverse opening balance appropriately

	* src/engine/Account.c: change return type to const
